hardware/common/svf-player/src/parser.output
Terminals unused in grammar

    SVF_INSTRUCTION_PIO
    SVF_INSTRUCTION_PIOMAP


State 32 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: command
    2        | command program

    3 command: SVF_INSTRUCTION_ENDDR stable_state end
    4        | SVF_INSTRUCTION_ENDIR stable_state end
    5        | SVF_INSTRUCTION_FREQUENCY end
    6        | SVF_INSTRUCTION_FREQUENCY cycles end
    7        | SVF_INSTRUCTION_HDR common end
    8        | SVF_INSTRUCTION_HIR common end
    9        | SVF_INSTRUCTION_RUNTEST SVF_UNSIGNED_INT run_clk end
   10        | SVF_INSTRUCTION_RUNTEST SVF_UNSIGNED_INT run_clk min end
   11        | SVF_INSTRUCTION_RUNTEST SVF_UNSIGNED_INT run_clk min max end
   12        | SVF_INSTRUCTION_RUNTEST SVF_UNSIGNED_INT run_clk end_state end
   13        | SVF_INSTRUCTION_RUNTEST SVF_UNSIGNED_INT run_clk min end_state end
   14        | SVF_INSTRUCTION_RUNTEST SVF_UNSIGNED_INT run_clk min max end_state end
   15        | SVF_INSTRUCTION_RUNTEST stable_state SVF_UNSIGNED_INT run_clk end
   16        | SVF_INSTRUCTION_RUNTEST stable_state SVF_UNSIGNED_INT run_clk min end
   17        | SVF_INSTRUCTION_RUNTEST stable_state SVF_UNSIGNED_INT run_clk min max end
   18        | SVF_INSTRUCTION_RUNTEST stable_state SVF_UNSIGNED_INT run_clk end_state end
   19        | SVF_INSTRUCTION_RUNTEST stable_state SVF_UNSIGNED_INT run_clk min end_state end
   20        | SVF_INSTRUCTION_RUNTEST stable_state SVF_UNSIGNED_INT run_clk min max end_state end
   21        | SVF_INSTRUCTION_RUNTEST min end
   22        | SVF_INSTRUCTION_RUNTEST min max end
   23        | SVF_INSTRUCTION_RUNTEST min end_state end
   24        | SVF_INSTRUCTION_RUNTEST min max end_state end
   25        | SVF_INSTRUCTION_RUNTEST stable_state min end
   26        | SVF_INSTRUCTION_RUNTEST stable_state min max end
   27        | SVF_INSTRUCTION_RUNTEST stable_state min end_state end
   28        | SVF_INSTRUCTION_RUNTEST stable_state min max end_state end
   29        | SVF_INSTRUCTION_SDR SVF_UNSIGNED_INT end
   30        | SVF_INSTRUCTION_SDR common end
   31        | SVF_INSTRUCTION_SIR common end
   32        | SVF_INSTRUCTION_STATE stable_state end
   33        | SVF_INSTRUCTION_STATE statelist end
   34        | SVF_INSTRUCTION_TDR common end
   35        | SVF_INSTRUCTION_TIR common end
   36        | SVF_INSTRUCTION_TRST trst_mode end

   37 stable_state: SVF_STATE_RESET
   38             | SVF_STATE_IDLE
   39             | SVF_STATE_DRPAUSE
   40             | SVF_STATE_IRPAUSE

   41 state: SVF_STATE_RESET
   42      | SVF_STATE_IDLE
   43      | SVF_STATE_DRSELECT
   44      | SVF_STATE_DRCAPTURE
   45      | SVF_STATE_DRSHIFT
   46      | SVF_STATE_DREXIT1
   47      | SVF_STATE_DRPAUSE
   48      | SVF_STATE_DREXIT2
   49      | SVF_STATE_DRUPDATE
   50      | SVF_STATE_IRSELECT
   51      | SVF_STATE_IRCAPTURE
   52      | SVF_STATE_IRSHIFT
   53      | SVF_STATE_IREXIT1
   54      | SVF_STATE_IRPAUSE
   55      | SVF_STATE_IREXIT2
   56      | SVF_STATE_IRUPDATE

   57 end: SVF_INSTRUCTION_END

   58 tdi: SVF_TDI SVF_HEXSTRING

   59 tdo: SVF_TDO SVF_HEXSTRING

   60 mask: SVF_MASK SVF_HEXSTRING

   61 smask: SVF_SMASK SVF_HEXSTRING

   62 common: SVF_UNSIGNED_INT
   63       | SVF_UNSIGNED_INT tdi
   64       | SVF_UNSIGNED_INT tdi tdo
   65       | SVF_UNSIGNED_INT tdi mask
   66       | SVF_UNSIGNED_INT tdi smask
   67       | SVF_UNSIGNED_INT tdi tdo mask
   68       | SVF_UNSIGNED_INT tdi tdo smask
   69       | SVF_UNSIGNED_INT tdi mask smask
   70       | SVF_UNSIGNED_INT tdi tdo mask smask

   71 statelist: stable_state
   72          | state statelist

   73 cycles: SVF_REAL_NUMBER SVF_HZ

   74 run_clk: SVF_RUN_CLK_TCK
   75        | SVF_RUN_CLK_SCK

   76 min: SVF_REAL_NUMBER SVF_SEC

   77 max: SVF_MAXIMUM SVF_REAL_NUMBER SVF_SEC

   78 end_state: SVF_ENDSTATE stable_state

   79 trst_mode: SVF_TRST_MODE_ON
   80          | SVF_TRST_MODE_OFF
   81          | SVF_TRST_MODE_Z
   82          | SVF_TRST_MODE_ABSENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SVF_INSTRUCTION_ENDDR <u> (258) 3
    SVF_INSTRUCTION_ENDIR <u> (259) 4
    SVF_INSTRUCTION_FREQUENCY <u> (260) 5 6
    SVF_INSTRUCTION_HDR <u> (261) 7
    SVF_INSTRUCTION_HIR <u> (262) 8
    SVF_INSTRUCTION_PIO <u> (263)
    SVF_INSTRUCTION_PIOMAP <u> (264)
    SVF_INSTRUCTION_RUNTEST <u> (265) 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
    SVF_INSTRUCTION_SDR <u> (266) 29 30
    SVF_INSTRUCTION_SIR <u> (267) 31
    SVF_INSTRUCTION_STATE <u> (268) 32 33
    SVF_INSTRUCTION_TDR <u> (269) 34
    SVF_INSTRUCTION_TIR <u> (270) 35
    SVF_INSTRUCTION_TRST <u> (271) 36
    SVF_STATE_RESET <u> (272) 37 41
    SVF_STATE_IDLE <u> (273) 38 42
    SVF_STATE_DRSELECT <u> (274) 43
    SVF_STATE_DRCAPTURE <u> (275) 44
    SVF_STATE_DRSHIFT <u> (276) 45
    SVF_STATE_DREXIT1 <u> (277) 46
    SVF_STATE_DRPAUSE <u> (278) 39 47
    SVF_STATE_DREXIT2 <u> (279) 48
    SVF_STATE_DRUPDATE <u> (280) 49
    SVF_STATE_IRSELECT <u> (281) 50
    SVF_STATE_IRCAPTURE <u> (282) 51
    SVF_STATE_IRSHIFT <u> (283) 52
    SVF_STATE_IREXIT1 <u> (284) 53
    SVF_STATE_IRPAUSE <u> (285) 40 54
    SVF_STATE_IREXIT2 <u> (286) 55
    SVF_STATE_IRUPDATE <u> (287) 56
    SVF_REAL_NUMBER <d> (288) 73 76 77
    SVF_UNSIGNED_INT <u> (289) 9 10 11 12 13 14 15 16 17 18 19 20 29 62 63 64 65 66 67 68 69 70
    SVF_HEXSTRING <string> (290) 58 59 60 61
    SVF_RUN_CLK_TCK <u> (291) 74
    SVF_RUN_CLK_SCK <u> (292) 75
    SVF_TRST_MODE_ON <u> (293) 79
    SVF_TRST_MODE_OFF <u> (294) 80
    SVF_TRST_MODE_Z <u> (295) 81
    SVF_TRST_MODE_ABSENT <u> (296) 82
    SVF_HZ <string> (297) 73
    SVF_MAXIMUM <string> (298) 77
    SVF_SEC <string> (299) 76 77
    SVF_ENDSTATE <string> (300) 78
    SVF_TDI <string> (301) 58
    SVF_TDO <string> (302) 59
    SVF_MASK <string> (303) 60
    SVF_SMASK <string> (304) 61
    SVF_INSTRUCTION_END <string> (305) 57


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    program (52)
        on left: 1 2
        on right: 0 2
    command (53)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 1 2
    stable_state <u> (54)
        on left: 37 38 39 40
        on right: 3 4 15 16 17 18 19 20 25 26 27 28 32 71 78
    state <u> (55)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
        on right: 72
    end (56)
        on left: 57
        on right: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    tdi <string> (57)
        on left: 58
        on right: 63 64 65 66 67 68 69 70
    tdo <string> (58)
        on left: 59
        on right: 64 67 68 70
    mask <string> (59)
        on left: 60
        on right: 65 67 69 70
    smask <string> (60)
        on left: 61
        on right: 66 68 69 70
    common <shift_data> (61)
        on left: 62 63 64 65 66 67 68 69 70
        on right: 7 8 30 31 34 35
    statelist <list> (62)
        on left: 71 72
        on right: 33 72
    cycles <d> (63)
        on left: 73
        on right: 6
    run_clk <u> (64)
        on left: 74 75
        on right: 9 10 11 12 13 14 15 16 17 18 19 20
    min <d> (65)
        on left: 76
        on right: 10 11 13 14 16 17 19 20 21 22 23 24 25 26 27 28
    max <d> (66)
        on left: 77
        on right: 11 14 17 20 22 24 26 28
    end_state <u> (67)
        on left: 78
        on right: 12 13 14 18 19 20 23 24 27 28
    trst_mode <u> (68)
        on left: 79 80 81 82
        on right: 36


State 0

    0 $accept: . program $end

    SVF_INSTRUCTION_ENDDR      shift, and go to state 1
    SVF_INSTRUCTION_ENDIR      shift, and go to state 2
    SVF_INSTRUCTION_FREQUENCY  shift, and go to state 3
    SVF_INSTRUCTION_HDR        shift, and go to state 4
    SVF_INSTRUCTION_HIR        shift, and go to state 5
    SVF_INSTRUCTION_RUNTEST    shift, and go to state 6
    SVF_INSTRUCTION_SDR        shift, and go to state 7
    SVF_INSTRUCTION_SIR        shift, and go to state 8
    SVF_INSTRUCTION_STATE      shift, and go to state 9
    SVF_INSTRUCTION_TDR        shift, and go to state 10
    SVF_INSTRUCTION_TIR        shift, and go to state 11
    SVF_INSTRUCTION_TRST       shift, and go to state 12

    program  go to state 13
    command  go to state 14


State 1

    3 command: SVF_INSTRUCTION_ENDDR . stable_state end

    SVF_STATE_RESET    shift, and go to state 15
    SVF_STATE_IDLE     shift, and go to state 16
    SVF_STATE_DRPAUSE  shift, and go to state 17
    SVF_STATE_IRPAUSE  shift, and go to state 18

    stable_state  go to state 19


State 2

    4 command: SVF_INSTRUCTION_ENDIR . stable_state end

    SVF_STATE_RESET    shift, and go to state 15
    SVF_STATE_IDLE     shift, and go to state 16
    SVF_STATE_DRPAUSE  shift, and go to state 17
    SVF_STATE_IRPAUSE  shift, and go to state 18

    stable_state  go to state 20


State 3

    5 command: SVF_INSTRUCTION_FREQUENCY . end
    6        | SVF_INSTRUCTION_FREQUENCY . cycles end

    SVF_REAL_NUMBER      shift, and go to state 21
    SVF_INSTRUCTION_END  shift, and go to state 22

    end     go to state 23
    cycles  go to state 24


State 4

    7 command: SVF_INSTRUCTION_HDR . common end

    SVF_UNSIGNED_INT  shift, and go to state 25

    common  go to state 26


State 5

    8 command: SVF_INSTRUCTION_HIR . common end

    SVF_UNSIGNED_INT  shift, and go to state 25

    common  go to state 27


State 6

    9 command: SVF_INSTRUCTION_RUNTEST . SVF_UNSIGNED_INT run_clk end
   10        | SVF_INSTRUCTION_RUNTEST . SVF_UNSIGNED_INT run_clk min end
   11        | SVF_INSTRUCTION_RUNTEST . SVF_UNSIGNED_INT run_clk min max end
   12        | SVF_INSTRUCTION_RUNTEST . SVF_UNSIGNED_INT run_clk end_state end
   13        | SVF_INSTRUCTION_RUNTEST . SVF_UNSIGNED_INT run_clk min end_state end
   14        | SVF_INSTRUCTION_RUNTEST . SVF_UNSIGNED_INT run_clk min max end_state end
   15        | SVF_INSTRUCTION_RUNTEST . stable_state SVF_UNSIGNED_INT run_clk end
   16        | SVF_INSTRUCTION_RUNTEST . stable_state SVF_UNSIGNED_INT run_clk min end
   17        | SVF_INSTRUCTION_RUNTEST . stable_state SVF_UNSIGNED_INT run_clk min max end
   18        | SVF_INSTRUCTION_RUNTEST . stable_state SVF_UNSIGNED_INT run_clk end_state end
   19        | SVF_INSTRUCTION_RUNTEST . stable_state SVF_UNSIGNED_INT run_clk min end_state end
   20        | SVF_INSTRUCTION_RUNTEST . stable_state SVF_UNSIGNED_INT run_clk min max end_state end
   21        | SVF_INSTRUCTION_RUNTEST . min end
   22        | SVF_INSTRUCTION_RUNTEST . min max end
   23        | SVF_INSTRUCTION_RUNTEST . min end_state end
   24        | SVF_INSTRUCTION_RUNTEST . min max end_state end
   25        | SVF_INSTRUCTION_RUNTEST . stable_state min end
   26        | SVF_INSTRUCTION_RUNTEST . stable_state min max end
   27        | SVF_INSTRUCTION_RUNTEST . stable_state min end_state end
   28        | SVF_INSTRUCTION_RUNTEST . stable_state min max end_state end

    SVF_STATE_RESET    shift, and go to state 15
    SVF_STATE_IDLE     shift, and go to state 16
    SVF_STATE_DRPAUSE  shift, and go to state 17
    SVF_STATE_IRPAUSE  shift, and go to state 18
    SVF_REAL_NUMBER    shift, and go to state 28
    SVF_UNSIGNED_INT   shift, and go to state 29

    stable_state  go to state 30
    min           go to state 31


State 7

   29 command: SVF_INSTRUCTION_SDR . SVF_UNSIGNED_INT end
   30        | SVF_INSTRUCTION_SDR . common end

    SVF_UNSIGNED_INT  shift, and go to state 32

    common  go to state 33


State 8

   31 command: SVF_INSTRUCTION_SIR . common end

    SVF_UNSIGNED_INT  shift, and go to state 25

    common  go to state 34


State 9

   32 command: SVF_INSTRUCTION_STATE . stable_state end
   33        | SVF_INSTRUCTION_STATE . statelist end

    SVF_STATE_RESET      shift, and go to state 35
    SVF_STATE_IDLE       shift, and go to state 36
    SVF_STATE_DRSELECT   shift, and go to state 37
    SVF_STATE_DRCAPTURE  shift, and go to state 38
    SVF_STATE_DRSHIFT    shift, and go to state 39
    SVF_STATE_DREXIT1    shift, and go to state 40
    SVF_STATE_DRPAUSE    shift, and go to state 41
    SVF_STATE_DREXIT2    shift, and go to state 42
    SVF_STATE_DRUPDATE   shift, and go to state 43
    SVF_STATE_IRSELECT   shift, and go to state 44
    SVF_STATE_IRCAPTURE  shift, and go to state 45
    SVF_STATE_IRSHIFT    shift, and go to state 46
    SVF_STATE_IREXIT1    shift, and go to state 47
    SVF_STATE_IRPAUSE    shift, and go to state 48
    SVF_STATE_IREXIT2    shift, and go to state 49
    SVF_STATE_IRUPDATE   shift, and go to state 50

    stable_state  go to state 51
    state         go to state 52
    statelist     go to state 53


State 10

   34 command: SVF_INSTRUCTION_TDR . common end

    SVF_UNSIGNED_INT  shift, and go to state 25

    common  go to state 54


State 11

   35 command: SVF_INSTRUCTION_TIR . common end

    SVF_UNSIGNED_INT  shift, and go to state 25

    common  go to state 55


State 12

   36 command: SVF_INSTRUCTION_TRST . trst_mode end

    SVF_TRST_MODE_ON      shift, and go to state 56
    SVF_TRST_MODE_OFF     shift, and go to state 57
    SVF_TRST_MODE_Z       shift, and go to state 58
    SVF_TRST_MODE_ABSENT  shift, and go to state 59

    trst_mode  go to state 60


State 13

    0 $accept: program . $end

    $end  shift, and go to state 61


State 14

    1 program: command .
    2        | command . program

    SVF_INSTRUCTION_ENDDR      shift, and go to state 1
    SVF_INSTRUCTION_ENDIR      shift, and go to state 2
    SVF_INSTRUCTION_FREQUENCY  shift, and go to state 3
    SVF_INSTRUCTION_HDR        shift, and go to state 4
    SVF_INSTRUCTION_HIR        shift, and go to state 5
    SVF_INSTRUCTION_RUNTEST    shift, and go to state 6
    SVF_INSTRUCTION_SDR        shift, and go to state 7
    SVF_INSTRUCTION_SIR        shift, and go to state 8
    SVF_INSTRUCTION_STATE      shift, and go to state 9
    SVF_INSTRUCTION_TDR        shift, and go to state 10
    SVF_INSTRUCTION_TIR        shift, and go to state 11
    SVF_INSTRUCTION_TRST       shift, and go to state 12

    $default  reduce using rule 1 (program)

    program  go to state 62
    command  go to state 14


State 15

   37 stable_state: SVF_STATE_RESET .

    $default  reduce using rule 37 (stable_state)


State 16

   38 stable_state: SVF_STATE_IDLE .

    $default  reduce using rule 38 (stable_state)


State 17

   39 stable_state: SVF_STATE_DRPAUSE .

    $default  reduce using rule 39 (stable_state)


State 18

   40 stable_state: SVF_STATE_IRPAUSE .

    $default  reduce using rule 40 (stable_state)


State 19

    3 command: SVF_INSTRUCTION_ENDDR stable_state . end

    SVF_INSTRUCTION_END  shift, and go to state 22

    end  go to state 63


State 20

    4 command: SVF_INSTRUCTION_ENDIR stable_state . end

    SVF_INSTRUCTION_END  shift, and go to state 22

    end  go to state 64


State 21

   73 cycles: SVF_REAL_NUMBER . SVF_HZ

    SVF_HZ  shift, and go to state 65


State 22

   57 end: SVF_INSTRUCTION_END .

    $default  reduce using rule 57 (end)


State 23

    5 command: SVF_INSTRUCTION_FREQUENCY end .

    $default  reduce using rule 5 (command)


State 24

    6 command: SVF_INSTRUCTION_FREQUENCY cycles . end
